--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "type":"module",
   "scripts": {
-    "server":"nodemon server"
+  "server":"nodemon server",
+  "start": "server.js"
   },
   "keywords": [],
   "author": "",
